Update environment configuration, enhance dashboard, and add subscription features
- Updated .env.example with new database and API keys for Dojah and Paystack.
- Configured database connection to use SSL for secure connections.
- Enhanced dashboard view with KYC and low funds warnings, upcoming renewals, and active subscriptions sections.
- Added new routes and controller for subscription management, including viewing, subscribing, and managing subscriptions.
- Updated navbar to include a link to the services page.

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,21 @@ LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
 SESSION_DRIVER=cookie
-DB_HOST=127.0.0.1
+DB_HOST=ep-hidden-mouse-adreyefm-pooler.c-2.us-east-1.aws.neon.tech
 DB_PORT=5432
-DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=app
+DB_USER=neondb_owner
+DB_PASSWORD=npg_8Gs0HKgzJheD
+DB_DATABASE=neondb_owner
+# psql 'postgresql://neondb_owner:npg_8Gs0HKgzJheD@ep-hidden-mouse-adreyefm-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+
+
+# Dojah KYC
+DOJAH_APP_ID=your_app_id
+DOJAH_SECRET_KEY=your_secret_key
+DOJAH_BASE_URL=https://api.dojah.io
+
+PAYSTACK_SECRET_KEY=sk_test_77335678e5b9cdb808c14f29f06b2fac89f17050
+
+# Bridgecard
+BRIDGECARD_API_KEY=your_api_key
+BRIDGECARD_BASE_URL=https://issuecards.api.bridgecard.co
